src/core/Claroline/PluginBundle/Tests/stub/plugin/Invalid/UnexpectedTranslationKey_1/InvalidUnexpectedTranslationKey_1.php
<?php

namespace Invalid\UnexpectedTranslationKey_1;

use Claroline\PluginBundle\AbstractType\ClarolinePlugin;

class InvalidUnexpectedTranslationKey_1 extends ClarolinePlugin
{
    public function getNameTranslationKey()
    {
        return array();
    }
}